--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,21 @@ services:
     extra_hosts:
       - srv.commtrust.local:172.22.10.2
       - idp.commtrust.local:172.22.10.3
+      - idp1.commtrust.local:172.22.10.3
+      - idp2.commtrust.local:172.22.10.3
     hostname: idp
     volumes:
-      - "./idp/config/metadata:/var/www/simplesamlphp/metadata"
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+      - "./idp/config/apache2:/etc/apache2/sites-enabled"
+      - "./idp/www:/var/www"
+    tmpfs:
+      - /run
+      - /run/lock
+      - /tmp
+    security_opt:
+      - seccomp:unconfined
+    cap_add:
+      - SYS_ADMIN
     expose:
       - 80
       - 443
@@ -27,10 +39,13 @@ services:
     extra_hosts:
       - srv.commtrust.local:172.22.10.2
       - idp.commtrust.local:172.22.10.3
+      - idp1.commtrust.local:172.22.10.3
+      - idp2.commtrust.local:172.22.10.3
     hostname: srv
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
-      - "./commtrust-demonstrator:/var/www"
+      - "./commtrust/config/apache2:/etc/apache2/sites-enabled"
+      - "./commtrust:/opt/commtrust"
     tmpfs:
       - /run
       - /run/lock
@@ -42,8 +57,7 @@ services:
     expose:
       - 80
       - 443
-    #depends_on:
-      #- "idp"
+      - 3306
     networks:
       commtrust:
         ipv4_address: 172.22.10.2
