--- a/idp/config/apache2/00-default.conf
+++ b/idp/config/apache2/00-default.conf
@@ -1,3 +1,7 @@
+        <Directory /var/www>
+            Options Indexes FollowSymLinks MultiViews
+
+        </Directory>
 <VirtualHost *:80>
         # The ServerName directive sets the request scheme, hostname and port that
         # the server uses to identify itself. This is used when creating
@@ -6,17 +10,14 @@
         # match this virtual host. For the default virtual host (this file) this
         # value is not decisive as it is used as a last resort host regardless.
         # However, you must set it for any further virtual host explicitly.
-        #ServerName www.example.com
+        ServerName idp.commtrust.local
+        ServerAlias idp1.commtrust.local
+        ServerAlias idp2.commtrust.local
 
         ServerAdmin webmaster@localhost
         DocumentRoot /var/www/simplesaml/www
 
         Alias /simplesaml /var/www/simplesaml/www
-
-        <Directory /var/www>
-            Options Indexes FollowSymLinks MultiViews
-
-        </Directory>
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
         # error, crit, alert, emerg.
@@ -33,5 +34,24 @@
         # following line enables the CGI configuration for this host only
         # after it has been globally disabled with "a2disconf".
         #Include conf-available/serve-cgi-bin.conf
+</VirtualHost>
+
+<VirtualHost *:80>
+        ServerName op.commtrust.local
+
+        ServerAdmin webmaster@localhost
+        DocumentRoot /var/www/phpoidc/phpOp
+
+        Alias /.well-known/webfinger /var/www/phpoidc/phpOp/discovery.php
+        Alias /.well-known/openid-configuration /var/www/phpoidc/phpOp/discovery.php
+        Alias /phpOp/.well-known/openid-configuration /var/www/phpoidc/phpOp/discovery.php
+
+        RewriteEngine on
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule .*/(.*?)$ /index.php [QSA,L,E=PATH_INFO:/$1]
+
+        ErrorLog ${APACHE_LOG_DIR}/error.log
+        CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
 
